# ocular_streamlining

./: .gitignore  Dockerfile  Makefile  README.md  make_docker.sh  pyproject.toml  requirements.txt  setup.py
docs/: index.html  make_docs.sh  mkdocs.yml  ocular_streamlining.html  scripts.html  search.js  streamlining_training.html
docs/docs/: about.md  getting-started.md  index.md
docs/ocular_streamlining/: channel_classifier.html  streamlining_classifier.html
docs/scripts/: do_streamlining.html  generate_docs.html
docs/streamlining_training/: config.html  dataset.html  features.html  modeling.html  plots.html
docs/streamlining_training/modeling/: eval.html  predict.html  train.html
docs/theme/: index.html.jinja2
models/: features.txt  model_metrics.json  search_results.csv
models/channel_classifier/Baseline/06-01-2024/: CD_columns.txt  CK_columns.txt  V_columns.txt
models/streamlining/Baseline/06-01-2024/: 06-01-2024.txt
notebooks/: 1.0-rmn-exploratory-data-analysis.ipynb  2.0-rmn-dbquery.ipynb  EDA.ipynb
ocular_streamlining/: channel_classifier.py  streamlining_classifier.py
reports/figures/: MI  correlated_features  impurity_permutaion_importance  permutation_importance_val_data
scripts/: do_streamlining.py  generate_docs.py
streamlining_training/: __init__.py  config.py  dataset.py  features.py  plots.py
streamlining_training/modeling/: eval.py  predict.py  train.py
