[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.poetry]
name = "ocular-streamlining"
version = "0.1.0"
description = "Ocular Streamlining Project"
authors = ["Rajiv <mandyana@usc.edu>"]

[tool.poetry.dependencies]
python = "^3.8"
black = "^21.7b0"
flake8 = "^3.9.2"
ipython = "^7.26.0"
isort = "^5.9.3"
jupyterlab = "^3.1.7"
loguru = "^0.5.3"
matplotlib = "^3.4.3"
mkdocs = "^1.2.2"
notebook = "^6.4.3"
numpy = "==1.26.4"
pandas = "==1.5.3"
pip = "^21.2.4"
python-dotenv = "^0.19.0"
scikit-learn = "==1.2.0"
imbalanced-learn = "^0.8.0"
joblib = "^1.0.1"
pyreadr = "^0.4.4"
python-dateutil = "^2.8.2"
pytz = "^2021.1"
scipy = "^1.7.1"
six = "^1.16.0"
threadpoolctl = "^2.2.0"
tzdata = "^2021.1"
tqdm = "^4.62.2"
typer = "^0.3.2"