[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "streamlining_training"
version = "0.1.0"
description = "Ocular Streamlining Project"
authors = ["Rajiv Mandya Nagaraju <mandyana@usc.edu>"]

[tool.poetry.dependencies]
python = "^3.12"
csi-utils = { path = "/mnt/HDSCA_Pipeline/software/csi_utils" }
imbalanced-learn = "0.12.4"
loguru = "0.7.2"
matplotlib = "3.9.2"
matplotlib-inline = "0.1.7"
numpy = "2.1.2"
pandas = "2.2.3"
psycopg2 = { version = "2.9.10", allow-prereleases = true, source = "pypi" }
pyreadr = "0.5.2"
scikit-learn = "1.5.2"
scipy = "1.14.1"
seaborn = "0.13.2"
threadpoolctl = "3.5.0"
tqdm = "4.66.5"
python-dotenv = "1.0.1"
openpyxl = "3.1.5"

[tool.poetry.scripts]
prepare_data = "streamlining_training.dataset:main"
feature_select = "streamlining_training.features:main"
train = "streamlining_training.modeling.train:main"
evaluate = "streamlining_training.modeling.eval:main"

[tool.poetry.dev-dependencies]
pytest = "^7.0"